# crewai-note

./: CRNNArchitectureNotes.docx  README.md  app.py  flashcards.md  pyproject.toml  report.md  report.txt  requirements.txt
src/project1/: class_notes.txt  crew.py  main.py
src/project1/config/: agents.yaml  tasks.yaml
src/project1/tools/: custom_tool.py
